@startuml

class CreateParameterUI{
}

class CreateParameterController{
+getListParameterCategoryDto()
+createParameter(code,shortName,description,selectedCategory)
+saveParameter()
}

class Company{
-String name
-String shortName
-category
-address
-headquarters
--
+getParameterCategoryStore()
+getParameterStore()
}

class ParameterStore {
+saveParameter(p)
+createParameter(code,shortName,description,selectedCategory)
+validateParameter(p)
+addParameter(p)

List<Parameter> listParameter

}

class ParameterCategoryMapper{
+toDTO(listParameterCategory)
parameterCategoryDto : ParameterCategoryDto
List<ParameterCategoryDto> listParameterCategoryDto
}

class ParameterCategoryStore {
+getParameterCategoryList()
}

class Parameter{
- String code
- String shortName
- String description
+createParameter(code,shortName,description,selectedCategory)
}

class ParameterCategory{
- code
- name
}



CreateParameterUI ..> CreateParameterController
CreateParameterController ..> Company
CreateParameterController ..> ParameterCategoryMapper : uses
CreateParameterController ..> ParameterCategoryStore : uses
CreateParameterController ..> ParameterStore : uses
Company "1" --> "1" ParameterStore : uses
Company "1" ..> "1" ParameterCategoryMapper
Company "1" ..> "1" ParameterCategoryStore : uses
ParameterStore ..> Parameter : Capable of analyzing
ParameterCategoryStore "1" ..> "*" ParameterCategory : adopts
Parameter "1" --> "*" ParameterCategory : presented under

@enduml